--- a/catus/templates/registration/login.html
+++ b/catus/templates/registration/login.html
@@ -24,7 +24,7 @@
 
     <div class="form-group">
         <hr>
-        <div class="d-flex flex-column align-items-center mt-3">
+        <div class="d-flex flex-column mt-3">
             <div class="mb-2">
                 {% trans "¿No tenés cuenta?" %} <a href="/accounts/register/">{% trans "Creá tu cuenta aquí" %}</a>
             </div>
