--- a/catus/templates/usuario/animales.html
+++ b/catus/templates/usuario/animales.html
@@ -32,6 +32,13 @@
 
       {% include "usuario/_socialnetworks.html" %}
     </div>
+
+    <!-- <div class="profile-action">
+      <button onclick="scrollToAnimals()" class="btn-view-animals">
+        <i class="fa fa-paw"></i> Ver animales en adopción
+        {% if perros_en_adopcion %}<span class="subtitle">Gatos y Perros</span>{% endif %}
+      </button>
+    </div> -->
   </div>
 </div>
 
@@ -177,7 +184,7 @@
 
     .profile-logo-wrapper {
       margin-right: 0;
-      margin-bottom: 20px;
+      margin-bottom: 0px;
     }
 
     .profile-action {
