--- a/catus/templates/adoption/preadoption.html
+++ b/catus/templates/adoption/preadoption.html
@@ -154,6 +154,10 @@
             margin-bottom: 15px;
         }
 
+        #terms-and-conditions ul {
+            padding-left: 0px;
+        }
+
         .form-group {
             margin-bottom: 12px;
         }
